--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
   </head>
   <body>
-    
+    <p>
+      Hey, this will only work for Chrome users who have  a microphone, and a Spotify account.
+    </p>
   </body>
 </html>
