better documented whats next steps, changed text on index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>
-      Hey, this will only work for Chrome users who have  a microphone, and a Spotify account.
+      Hey, this will only work for Chrome users who have  a microphone, and to actually listen to the song, you need a Spotify account.
     </p>
   </body>
 </html>
