created a button to start the app

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       Hey, this will only work for Chrome users who have  a microphone, and to actually listen to the song, you need a Spotify account.
     </p>
     <p>Github repo: <a href="https://github.com/iagowp/micToSong">micToSong</a></p>
+    <button onclick="recognition.start()">Start</button>
   </body>
 
   <script>
