--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       Hey, this will only work for Chrome users who have  a microphone, and to actually listen to the song, you need a Spotify account.
     </p>
     <p>Github repo: <a href="https://github.com/iagowp/micToSong">micToSong</a></p>
+    <p>Press start, say something to your mic, and wait to be redirected to Spotify</p>
     <button onclick="recognition.start()">Start</button>
   </body>
 
