--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <option value="en-US">American English</option>
       <option value="en-GB">Britain English</option>
     </select>
+    <select id="popularity" style="display: block;">
+    <!-- ugh, inline styling! NEED .... CHANGEEE ... IIIT -->
+      <option value="0">Most popular</option>
+      <option value="r">Random song</option>
+      <option value="99">Least popular</option>
+    </select>
     <button onclick="appStart()">Start</button>
   </body>
 
