--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- ugh, inline styling! NEED .... CHANGEEE ... IIIT -->
       <option value="en-US">American English</option>
       <option value="en-GB">Britain English</option>
+      <option value="pt-BR">Português do Brasil</option>
     </select>
     <select id="popularity" style="display: block;">
     <!-- ugh, inline styling! NEED .... CHANGEEE ... IIIT -->
