--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="app.js"></script>
   </head>
