enhanced text to be in accordance with the new features

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Hey, this will only work for Chrome users who have  a microphone, and to actually listen to the song, you need a Spotify account.
     </p>
     <p>Github repo: <a href="https://github.com/iagowp/micToSong">micToSong</a></p>
-    <p>Press start, allow access to your microphone if necessary, say something to your mic, and wait to be redirected to Spotify</p>
+    <p>Select your language, choose how you want the song to be chosen, in terms of popularity, and then press start. Allow access to your microphone if necessary, say something to your mic, and wait to be redirected to Spotify</p>
     <select id="language" style="display: block;"> 
     <!-- ugh, inline styling! NEED .... CHANGEEE ... IIIT -->
       <option value="en-US">American English</option>
