centered content, removed/commented code shouldnt be there, started converting to vanilla js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <option value="r">Random song</option>
       <option value="99">Least popular</option>
     </select>
-    <button id="start" onclick="window.pop = window.open('about:blank', '_blank')">Start</button>
+    <button id="start" onclick="appStart()">Start</button>
+    <!-- <button id="start" onclick="window.pop = window.open('about:blank', '_blank')">Start</button> -->
   </body>
 
   <script>
