--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <p>
       Hey, this will only work for Chrome users who have  a microphone, and to actually listen to the song, you need a Spotify account.
     </p>
-    <p>Github repo: <a href="https://github.com/iagowp/micToSong">micToSong</a></p>
     <p>Select your language, choose how you want the song to be chosen, in terms of popularity, and then press start. Allow access to your microphone if necessary, say something to your mic, and wait to be redirected to Spotify</p>
+    <label for="language">Select the language and accent you speak</label>
     <select id="language"> 
       <option value="en-US">American English</option>
       <option value="en-GB">Britain English</option>
       <option value="pt-BR">Português do Brasil</option>
     </select>
+    <label for="popularity">Select how would you like your song to be chosen</label>
     <select id="popularity">
       <option value="0">Most popular</option>
       <option value="r">Random song</option>
@@ -25,6 +26,8 @@
     </select>
     <button id="start" onclick="appStart()">Start</button>
     <!-- <button id="start" onclick="window.pop = window.open('about:blank', '_blank')">Start</button> -->
+    <p>Github repo: <a href="https://github.com/iagowp/micToSong">micToSong</a></p>
+
   </body>
 
   <script>
